// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser relational expressions parses equality expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
  },
]
`;

exports[`parser relational expressions parses greater-than expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Greater",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ">",
      },
    },
  },
]
`;

exports[`parser relational expressions parses greater-than-or-equal-to expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "GreaterEqual",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ">=",
      },
    },
  },
]
`;

exports[`parser relational expressions parses inequality expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "LessGreater",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<>",
      },
    },
  },
]
`;

exports[`parser relational expressions parses less-than expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Less",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
  },
]
`;

exports[`parser relational expressions parses less-than-or-equal-to expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "LessEqual",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<=",
      },
    },
  },
]
`;
